k8s/old/keycloak-gateway-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
spec:
  controllerName: configuration.konghq.com/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak-namespace
spec:
  gatewayClassName: kong
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: auth.s4v3.local
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak-namespace
spec:
  parentRefs:
  - name: keycloak-gateway
  hostnames:
  - auth.s4v3.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak
      port: 8080
